[gd_scene load_steps=2 format=3 uid="uid://c14fu7n2ot1tb"]

[ext_resource type="Script" path="res://Blackjack/blackjack_player_hand.gd" id="1_gvmon"]

[node name="BlackjackPlayerHand" type="Node2D"]
script = ExtResource("1_gvmon")

[node name="HitButton" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "Hit"

[node name="LabelsContainer" type="HBoxContainer" parent="."]
offset_left = 40.0
offset_right = 80.0
offset_bottom = 40.0

[node name="HandScore" type="Label" parent="LabelsContainer"]
layout_mode = 2

[node name="ChipsBet" type="Label" parent="LabelsContainer"]
layout_mode = 2

[node name="PlayerHand" type="Node2D" parent="."]

[connection signal="pressed" from="HitButton" to="." method="_on_hit_button_pressed"]
